force-app/main/default/objects/Time_Entry__c/fields/Break_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Break_End_Time__c</fullName>
    <label>Break End Time</label>
    <type>Time</type>
</CustomField>