force-app/main/default/objects/Time_Entry__c/fields/Break_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Break_Start_Time__c</fullName>
    <label>Break Start Time</label>
    <type>Time</type>
</CustomField>