force-app/main/default/objects/Time_Entry__c/fields/Break_Time__c.field-meta.xml
<CustomField>
    <fullName>Break_Time__c</fullName>
    <inlineHelpText>Hours(E.g., 30 minutes should be entered as 0.5)</inlineHelpText>
    <label>Break Time</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>