force-app/main/default/objects/Time_Entry__c/fields/Hours_Worked_Number_Format__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked_Number_Format__c</fullName>
    <label>Hours Worked(Number Format)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>