force-app/main/default/objects/Time_Entry__c/fields/Hours_Worked_Time_Format__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked_Time_Format__c</fullName>
    <label>Hours Worked(Time Format)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>