force-app/main/default/objects/Time_Entry__c/fields/Payroll_Status__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Status__c</fullName>
    <label>Payroll Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>