force-app/main/default/objects/Time_Entry__c/fields/Shift_Type__c.field-meta.xml
<CustomField>
    <fullName>Shift_Type__c</fullName>
    <label>Shift Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>On-Call</fullName>
            </value>
            <value>
                <fullName>Call-Back</fullName>
            </value>
            <value>
                <fullName>Overtime</fullName>
            </value>
            <value>
                <fullName>Double Time</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>