force-app/main/default/objects/Time_Entry__c/fields/Source_Shift__c.field-meta.xml
<CustomField>
    <fullName>Source_Shift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Shift</label>
    <referenceTo>Shift</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>