force-app/main/default/objects/Time_Entry__c/fields/TM_Project__c.field-meta.xml
<CustomField>
    <fullName>TM_Project__c</fullName>
    <formula>Timesheet__r.Project_Resource__r.Placement__r.Current_Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TM Project</label>
    <type>Text</type>
</CustomField>