force-app/main/default/objects/Time_Entry__c/fields/TM_Project_Resource__c.field-meta.xml
<CustomField>
    <fullName>TM_Project_Resource__c</fullName>
    <formula>Timesheet__r.Project_Resource__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TM Project Resource</label>
    <type>Text</type>
</CustomField>