force-app/main/default/objects/Time_Entry__c/fields/Weeks__c.field-meta.xml
<CustomField>
    <fullName>Weeks__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Weeks</label>
    <referenceTo>Weeks__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>