force-app/main/default/objects/Time_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Date__c</columns>
    <columns>Project__c</columns>
    <columns>Time_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>